--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,7 +4,10 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one:
+  username: Test Guy
+  email: test@email.com
+  mobile: 0412345678
 # column: value
 #
 two: {}
